<!-- activity_test.xml -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    >

    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:alpha="0.3"
        android:scaleType="fitCenter"
        android:src="@drawable/logo" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#4BD4C9">


        <TextView
            android:id="@+id/headerTextView"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_centerInParent="true"
            android:layout_marginStart="16dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:textStyle="bold"
            android:text="@string/test"
            android:textColor="#FFFFFF"
            android:textSize="24sp" />

    </RelativeLayout>

    <EditText
        android:id="@+id/searchBarEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/headerTextView"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="56dp"
        android:hint="@string/search"
        tools:ignore="NotSibling" />

    <TextView
        android:id="@+id/testNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/searchBarEditText"
        android:layout_marginTop="19dp"
        android:paddingStart="15dp"
        android:text="@string/_1_kotlin_basics_test"
        android:fontFamily="sans-serif-condensed-medium"
        android:textColor="#000000"
        android:textSize="20sp" />

    <Button
        android:id="@+id/attemptNowButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/testNameTextView"
        android:layout_marginTop="10dp"
        android:layout_marginStart="15dp"
        android:text="@string/attempt_now"
        android:fontFamily="sans-serif-condensed-medium"/>
</RelativeLayout>
