<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/submitButton">


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Header -->
            <RelativeLayout
                android:id="@+id/headerLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#4BD4C9"
                android:padding="8dp">

                <TextView
                    android:id="@+id/testNameHeader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kotlin_basics_test"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:fontFamily="sans-serif-condensed-medium"/>

                <TextView
                    android:id="@+id/timerTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_15_00"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="8dp" />


            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:text="@string/submit"
        android:fontFamily="sans-serif-condensed-medium"
        android:onClick="onSubmitButtonClick" />

</RelativeLayout>
