<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:alpha="0.3"
        android:scaleType="fitCenter"
        android:src="@drawable/logo" />

    <!-- Header -->
    <RelativeLayout
        android:id="@+id/headerLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#4BD4C9"
        android:padding="8dp"
        >

        <ImageView
            android:id="@+id/backButton"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_black_arrow"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="8dp"
            android:onClick="onBackButtonClick"/>

        <TextView
            android:id="@+id/testNameHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pps_test"
            android:textColor="@android:color/white"
            android:layout_centerVertical="true"
            android:textSize="20sp"
            android:fontFamily="sans-serif-condensed-medium"
            android:textStyle="bold"
            android:layout_toEndOf="@id/backButton"/>

    </RelativeLayout>

    <!-- Test Instructions -->
    <TextView
        android:id="@+id/testInstructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/headerLayout"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/this_test_will_be_for_15_minutes_and_consist_of_15_questions_n_n_arrange_for_stable_internet_connectivity_n_n_giving_examination_on_laptop_or_desktop_is_highly_recommended_n_n_make_sure_mobile_laptop_is_fully_charged_power_bank_for_mobile_or_ups_inverter_for_laptop_desktop_should_be_arranged_for_uninterrupted_power_supply"
        android:textSize="18sp" />

    <!-- Checkbox and Confirmation Message -->
    <CheckBox
        android:id="@+id/confirmCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/testInstructions"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/i_confirm_that_i_am_ready_to_start_the_test"
        android:fontFamily="sans-serif-condensed"/>

    <TextView
        android:id="@+id/confirmationMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/nextButton"
        android:layout_margin="8dp"
        android:text=""
        android:textColor="#FF0000" />

    <!-- Next Button -->
    <Button
        android:id="@+id/nextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/confirmCheckBox"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:onClick="onNextButtonClick"
        android:text="@string/next"
        android:fontFamily="sans-serif-condensed-medium"/>

</RelativeLayout>
